Fixed MMOBHTML-26: We've got feedback and need to fix the issues asap, Fixed MMOBHTML-27: Delete button covered part of text in wishlist, Fixed MMOBHTML-28: Text It's very close to page edge, Fixed MMOBHTML-30: User can't select product options, Fixed MMOBHTML-32: Make drop-down animation for search and menu like it is for cart

--- a/skin/frontend/default/iphone/css/iphone.css
+++ b/skin/frontend/default/iphone/css/iphone.css
@@ -209,7 +209,8 @@ body > header dt a {
     padding:0 25px;
 }
 
-body > header dt.active a {
+body > header dt.active a,
+body > header dt.active span:first-child {
     background-color:#333;
     border:solid #666;
     border-width:1px 1px 0;
@@ -248,9 +249,14 @@ body > header dt.cart > span:first-child {
     line-height:32px;
     width:50px;
     background-image:url(../images/i_menu_cart.png);
-    background-position:center;
+    background-position:center 10px;
     background-repeat:no-repeat;
     text-indent:-99000px;
+}
+body > header dt.active span:first-child {
+    margin:-1px -6px -7px;
+    padding:0 30px 7px;
+    width:0;
 }
 
 body > header dt.cart > span:nth-child(2) {
@@ -473,7 +479,7 @@ body > section > .category-image img { min-width:100%; }
     overflow:hidden;
     margin:0 0 -1px;
     padding:0 0 1px;
-    width:9000px;
+    width:1000px;
     -webkit-transform:translate3d(0, 0, 0);
     -webkit-transition:-webkit-transform 250ms linear;
     -webkit-backface-visibility:hidden;
@@ -1416,6 +1422,13 @@ section .category-title { display:none; }
 .rating-box { width:75px; height:15px; margin:3px 0; }
 .rating-box .rating { height:15px; background:url(../images/i_star.png) repeat-x center left; background-size:15px 15px; }
 
+.product-shop .product-options-bottom .price-box { font-size:14px; font-weight:bold; text-align:right; }
+.product-shop .product-options-bottom .add-to-cart label,
+.product-shop .product-options-bottom .add-to-cart input[type=text] { vertical-align:middle; margin:0; }
+.product-shop .product-options-bottom .add-to-cart button { margin:30px -100% 0 0; }
+.product-shop .product-options-bottom .product-actions { margin-bottom:10px; }
+.product-shop .product-options-bottom .product-actions li { display:table-cell; }
+
 .product-shop .add-to-cart-box { padding:5px 0; }
 .product-shop .add-to-cart-box label { vertical-align:middle; }
 .product-shop .add-to-cart-box .qty { border:1px solid #ccc; border-radius:3px; font-size:12px; font-weight:bold; margin:0 0 0 5px; padding:4px 5px; -webkit-appearance:none; -webkit-background-clip:padding-box; width:35px; -webkit-box-sizing:content-box; vertical-align:middle; }
@@ -1701,7 +1714,7 @@ section .category-title { display:none; }
 .review-product-list .breadcrumbs .product { display:none; }
 .review-product-list label em { margin:0 5px 0 0; color: #F4641E; }
 .review-product-list .rating-box { width:75px; height:11px; margin:3px 0; }
-.review-product-list .rating-box .rating { height:11px; background:url(../images/bg_rating_star.png) repeat-x center left; }
+.review-product-list .rating-box .rating { height:11px; }
 .review-product-list textarea { width:100%; height:100px; }
 .review-product-list .pager,
 .review-product-list .form-add h2,
@@ -1959,6 +1972,96 @@ section .category-title { display:none; }
 .my-account label[for="street_1"],
 .my-account h2.legend { display:none; }
 
+.sales-order-view .my-account {
+    margin:0;
+}
+.sales-order-view #my-orders-table {
+    border-collapse:collapse;
+    margin:10px 0 15px;
+    -webkit-box-shadow:0 3px 6px #ccc;
+}
+.sales-order-view #my-orders-table th,
+.sales-order-view #my-orders-table td {
+    background:#fff;
+    text-align:left;
+    vertical-align:top;
+}
+.sales-order-view #my-orders-table th {
+    color:#222;
+    width:33%;
+}
+.sales-order-view #my-orders-table .product-name {
+    font-weight:normal;
+}
+.sales-order-view #my-orders-table tbody.collapsed tr,
+.sales-order-view #my-orders-table tbody.collapsed td dl {
+    display:none;
+}
+.sales-order-view #my-orders-table tbody tr:first-child {
+    display:table-row;
+}
+.sales-order-view #my-orders-table tbody {
+    border:1px solid #ccc;
+}
+.sales-order-view #my-orders-table tbody tr:first-child {
+    border:1px solid #ccc;
+    border-bottom-color:#bbb;
+}
+.sales-order-view #my-orders-table tbody tr:first-child th,
+.sales-order-view #my-orders-table tbody tr:first-child th + td {
+    background:-webkit-gradient(linear, 0 0, 0 100%, from(#f6f6f6), to(#ddd));
+    display:table-cell;
+    padding:5px;
+    font-weight:normal;
+    text-shadow:0 -1px 0 #fff;
+}
+.sales-order-view #my-orders-table tbody tr:first-child th + td {
+    padding-right:30px !important;
+}
+.sales-order-view #my-orders-table tbody tr:first-child th + td:before {
+    background:url(../images/i_arrow.png) no-repeat 0 0;
+    background-size:12px 12px;
+    content:'';
+    display:block;
+    height:12px;
+    width:12px;
+    margin:2px 0 0;
+    position:absolute;
+    right:17px;
+    -webkit-transform:scaleY(-1);
+}
+.sales-order-view #my-orders-table tbody.collapsed tr:first-child th + td:before {
+    -webkit-transform:scaleY(1);
+}
+.sales-order-view #my-orders-table tr:nth-child(even) th,
+.sales-order-view #my-orders-table tr:nth-child(even) td {
+}
+.sales-order-view #my-orders-table td[colspan="2"] {
+    color:#808080;
+    font-size:12px;
+    padding:10px 0 0;
+    font-weight:bold;
+    text-transform:uppercase;
+    text-shadow:0 -1px 0 #fff;
+}
+.sales-order-view #my-orders-table td[colspan="2"] .option-label {
+    padding:5px 10px 0 5px;
+}
+.sales-order-view #my-orders-table tfoot tr:first-child th,
+.sales-order-view #my-orders-table tfoot tr:first-child td {
+    padding-top:10px;
+}
+.sales-order-view #my-orders-table tfoot tr:last-child th,
+.sales-order-view #my-orders-table tfoot tr:last-child td {
+    padding-bottom:10px;
+}
+.sales-order-view #my-orders-table tfoot th,
+.sales-order-view #my-orders-table tfoot td {
+    border:0;
+}
+
+.sales-order-view .box .box-content { padding:10px; }
+
 .sales-order-history .data-table { border-spacing:0; margin:-10px 0 0 0; width:100%; }
 .sales-order-history .data-table th,
 .sales-order-history .data-table td { padding:2px 5px; }
@@ -1966,7 +2069,7 @@ section .category-title { display:none; }
 .sales-order-history .data-table th:nth-child(4) { width:20%; text-align:left; }
 .sales-order-history .data-table tr:nth-child(odd) { background:#f6f6f6; }
 .sales-order-history .amount { display:none; }
-.sales-order-history .limiter {
+.sales-order-history .pager {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFB76B), color-stop(50%,#FFA73D), color-stop(51%,#FF7C00), color-stop(100%,#FF7F04));
     border-bottom: 1px solid #999;
     margin: 0 0 10px;
@@ -1975,8 +2078,13 @@ section .category-title { display:none; }
     font-weight: bold;
     text-shadow: 0 0 3px #333;
     line-height: 1;
+    text-align:right;
 }
-.sales-order-history .limiter select {
+.sales-order-history .limiter {
+    float:left;
+}
+.sales-order-history .limiter select,
+.sales-order-history .pages select {
     padding:3px 30px 3px 7px;
 }
 .sales-order-history .back-link a {
@@ -2058,6 +2166,7 @@ section .category-title { display:none; }
 }
     .customer-address-index .addresses-list ol li {
         display:inline-block;
+        vertical-align:top;
         width:45%;
     }
 .customer-address-index .back-link a {
@@ -2099,6 +2208,9 @@ section .category-title { display:none; }
     -webkit-border-radius: 4px;
     -webkit-box-shadow: inset 0 0 2px #000;
     text-shadow: 0 1px 0 white;
+}
+.sales-order-view .page-title .link-print {
+    display:none;
 }
 .sales-order-invoice .page-title:after,
 .sales-order-shipment .page-title:after,
@@ -2221,11 +2333,13 @@ section .category-title { display:none; }
     font-family:Arial Rounded MT Bold;
     border:2px solid #fff;
     border-radius:15px;
+    float:right;
     display:inline-block;
     color:#fff;
     font-size:14px;
     font-weight:bold;
     line-height:14px;
+    margin-right:5px;
     padding:0 5px 2px;
     text-shadow:0 1px 1px #999;
     vertical-align:middle;
